<resources>
    <string name="app_name">Converge Codelab</string>
    <string name="txtTitle">Github Users</string>
    <string name="imgDescription">Profile Picture</string>
    <string name="txtFollowers">Followers</string>
    <string name="txtRepos">Repos</string>
    <string name="txtOrganizations">Orgs</string>
    <string name="imgLogo">Convege Codelab logo</string>
    <string name="imgFollowers">Followers image</string>
    <string name="imgRepos">Repository image</string>
    <string name="imgOrgs">Organizations image</string>
</resources>
